# reliability

./: .gitignore  LICENSE  README.md  perdura.py  perdura.spec  pyproject.toml
.github/workflows/: release.yml
gui/: start.sh
gui/backend/: main.py  requirements.txt  schemas.py
gui/backend/routers/: alt.py  capability.py  doe.py  fault_tree.py  growth.py  hra.py  life_data.py  pof.py  prediction.py  predictive.py  regression.py  spc.py  system_reliability.py  warranty.py
gui/backend/tests/: test_alt_passprob.py  test_growth_mcf_trend.py  test_hra.py
gui/frontend/: index.html  package-lock.json  package.json
gui/frontend/src/: App.tsx  index.css
gui/frontend/src/api/: capability.ts  client.ts  predictive.ts  regression.ts  spc.ts
src/reliability/: ALT_fitters.py  Bayesian.py  CHAID.py  Derating.py  Distributions.py  FaultTree.py  Fitters.py  HRA.py  MIL_HDBK_217F.py  NPRD_EPRD.py  Nonparametric.py  Probability_plotting.py  Process_capability.py  Regression.py  Reliability_testing.py  Repairable_systems.py  SPC.py  Special_models.py  SystemReliability.py  Utils.py  __init__.py
tests/: conftest.py  test_alt_fitters.py  test_derating.py  test_distributions.py  test_fault_tree.py  test_fault_tree_enhanced.py  test_fitters.py  test_mil_hdbk_217f.py  test_nonparametric.py  test_nprd_eprd.py  test_predictive.py  test_probability_plotting.py  test_process_capability.py  test_reliability_testing.py  test_reliability_testing_extras.py  test_repairable_extras.py  test_spc.py  test_special_models.py  test_system_reliability.py  test_utils.py  test_weibayes.py
(+72 files in other folders)
